doc: Clarify user input descriptions in request issue template

--- a/.github/ISSUE_TEMPLATE/request.yml
+++ b/.github/ISSUE_TEMPLATE/request.yml
@@ -8,29 +8,34 @@ body:
   - type: markdown
     attributes:
       value: |
-        _Please enter a short description in the title bar above this text. Format: "Instance: Short description"._
+        _Please enter a short description of your project in the title bar above this text. Format: "Instance: Short description"._
 
   - type: dropdown
     attributes:
       label: Cloud Computing Instance Flavor
       description: Select the type of cloud-computing instance to create.
       options:
-        - m3.xl - General-purpose instance (32 CPUs, 125 GB RAM and 60 GB root
-          disk)
-        - g3.xl - GPU instance (32 CPUs, 125 GB RAM and 60 GB root disk)
+        - m3.xl - General-purpose instance (32 CPUs, 125 GB RAM, no GPU)
+        - g3.xl - GPU instance (32 CPUs, 125 GB RAM and A100 GPU)
     validations:
       required: true
 
   - type: textarea
     attributes:
       label: Description
-      description: Briefly describe how you will be using the instance.
+      description:
+        Briefly describe what your project is, your usage needs and how you will
+        be using the instance. Approval of the request is contingent upon a
+        valid use case in the domain of 3D digital morphology. Please do not
+        leave this field empty. Requests with empty Description field will be
+        automatically denied.
     validations:
       required: false
 
   - type: input
     attributes:
       label: Email
-      description: Email to use for notifications.
+      description:
+        Email to use for notifications. Please double check your entry.
     validations:
       required: true
