feat: Update request issue template to also assign to "muratmaga"

--- a/.github/ISSUE_TEMPLATE/request.yml
+++ b/.github/ISSUE_TEMPLATE/request.yml
@@ -3,6 +3,7 @@ description: Issue template to request a cloud instance creation.
 title: "Instance: "
 assignees:
   - jcfr
+  - muratmaga
 
 body:
   - type: markdown
