--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,5 +28,6 @@ repos:
     rev: "0.28.0"
     hooks:
       - id: check-dependabot
+      - id: check-github-actions
       - id: check-github-workflows
       - id: check-readthedocs
