--- a/.github/workflows/control-instance.yml
+++ b/.github/workflows/control-instance.yml
@@ -65,11 +65,9 @@ jobs:
 
       - name: Define instance name
         id: define
-        run: |
-          instance_name="morpho-cloud-portal_instance-$ISSUE_NUMBER"
-          echo "instance_name=$instance_name" >> $GITHUB_OUTPUT
-        env:
-          ISSUE_NUMBER: ${{ github.event.issue.number }}
+        uses: ./.github/actions/define-instance-name
+        with:
+          issue_number: ${{ github.event.issue.number }}
 
       - name: Check instance exists
         id: check_instance
