--- a/.github/workflows/send-email.yml
+++ b/.github/workflows/send-email.yml
@@ -134,24 +134,15 @@ jobs:
 
       - name: Send mail (completed)
         id: send_email
-        uses: dawidd6/action-send-mail@2cea9617b09d79a095af21254fbcb7ae95903dde # v3.12.0
+        uses: ./.github/actions/send-email
         with:
-          server_address: smtp.gmail.com
-          server_port: 465
-          secure: true
-          username: ${{secrets.MAIL_USERNAME}}
-          password: ${{secrets.MAIL_PASSWORD}}
-          from: MorphoCloudPortal
           to: ${{ steps.extract.outputs.email }}
-          subject:
-            "[MorphoCloudPortal] Instance ${{ steps.define.outputs.instance_name
-            }} created"
-          body: |
-            Instance ${{ steps.define.outputs.instance_name }} created
-
-            Web connect: ${{ steps.guacamole.outputs.connection_url }}
-            SSH: ssh exouser@${{ steps.instance_metadata.outputs.instance_ip }}
-            Passphrase: ${{ steps.instance_metadata.outputs.instance_pwd }}
+          mail_server_username: ${{secrets.MAIL_USERNAME}}
+          mail_server_password: ${{secrets.MAIL_PASSWORD}}
+          instance_name: ${{ steps.define.outputs.instance_name }}
+          connection_url: ${{ steps.guacamole.outputs.connection_url }}
+          instance_ip: ${{ steps.instance_metadata.outputs.instance_ip }}
+          instance_pwd: ${{ steps.instance_metadata.outputs.instance_pwd }}
 
       - name: command results comment (success)
         if: ${{ steps.send_email.outcome == 'success' && success() }}
