--- a/.github/workflows/create-instance.yml
+++ b/.github/workflows/create-instance.yml
@@ -366,37 +366,9 @@ jobs:
       - name: Generate Guacamole Connection URL
         if: ${{ steps.instance_poll.outputs.status == 'complete' }}
         id: guacamole
-        run: |
-          # See hard-coded value in exosphere/src/Helpers/Interaction.elm
-          guacamole_port=49528
-
-          # See cloud_configs.js (allocation region is "IU")
-          proxy_hostname=proxy-js2-iu.exosphere.app
-
-          # See "buildProxyUrl" in src/Helpers/Url.elm
-          proxified_instance_ip=${INSTANCE_IP//./-}
-
-          # See "stepServerGuacamoleAuth" in exosphere/src/Orchestration/GoalServer.elm
-          # tokens_url="https://http-$proxified_instance_ip-$guacamole_port.$proxy_hostname/guacamole/api/tokens"
-          # auth_token=$(
-          #   curl -X POST --silent -d "username=exouser&password=$INSTANCE_PWD" $tokens_url | \
-          #   jq -r .authToken
-          # )
-          # echo "::add-mask::$auth_token"
-          #
-          # Since the token expires after a few hours, remove "?token=$auth_token" from "connection_url" and require
-          # the user to explicitly authenticate specifying the username and passphrase.
-
-          # See hard-coded value in exosphere/src/Helpers/Interaction.elm
-          client_id=ZGVza3RvcABjAGRlZmF1bHQ
-
-          connection_url="https://http-$proxified_instance_ip-$guacamole_port.$proxy_hostname/guacamole/#/client/$client_id="
-          echo $connection_url
-          echo "connection_url=$connection_url" >> $GITHUB_OUTPUT
-
-        env:
-          INSTANCE_IP: ${{ steps.instance_metadata.outputs.instance_ip }}
-          INSTANCE_PWD: ${{ steps.instance_metadata.outputs.instance_pwd }}
+        uses: ./.github/actions/generate-connection-url
+        with:
+          instance_ip: ${{ steps.instance_metadata.outputs.instance_ip }}
 
       - name: comment (failed to generate connection URL)
         if: ${{ steps.guacamole.outcome == 'failure' && failure() }}
