--- a/.github/workflows/create-instance.yml
+++ b/.github/workflows/create-instance.yml
@@ -76,24 +76,9 @@ jobs:
 
       - name: Check instance exists
         id: check_instance
-        run: |
-          export OS_CLOUD=BIO180006_IU # Select openstack auth settings defined in ".config/openstack/clouds.yaml"
-
-          source ~/venv/bin/activate
-
-          instance=$(openstack server list -f json | \
-            jq \
-              --arg instance_name "$INSTANCE_NAME" \
-              -c '.[] | select(.Name | contains($instance_name))' | \
-            jq -r '.Name' | tail -1)
-
-          [[ $instance == "$INSTANCE_NAME" ]] && exists="true" || exists="false"
-
-          echo "exists [$exists]"
-          echo "exists=$exists" >> $GITHUB_OUTPUT
-
-        env:
-          INSTANCE_NAME: ${{ steps.define.outputs.instance_name }}
+        uses: ./.github/actions/check-instance-exists
+        with:
+          instance_name: ${{ steps.define.outputs.instance_name }}
 
       - name: comment (Instance already created)
         if: ${{ fromJSON(steps.check_instance.outputs.exists) }}
