--- a/.github/workflows/request-labeler.yml
+++ b/.github/workflows/request-labeler.yml
@@ -13,6 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     #if: contains(github.event.pull_request.labels.*.name, 'instance:requested')
     steps:
+      - uses: actions/checkout@v4
+
       - name: Extract issue fields
         id: extract
         uses: ./.github/actions/extract-issue-fields
