--- a/.github/workflows/create-instance.yml
+++ b/.github/workflows/create-instance.yml
@@ -51,6 +51,7 @@ jobs:
         id: extract
         uses: ./.github/actions/extract-issue-fields
         with:
+          repository: ${{ github.repository }}
           issue_number: ${{ github.event.issue.number }}
 
       - name: Extract labels
