--- a/.github/workflows/send-email.yml
+++ b/.github/workflows/send-email.yml
@@ -27,6 +27,7 @@ jobs:
         id: extract
         uses: ./.github/actions/extract-issue-fields
         with:
+          repository: ${{ github.repository }}
           issue_number: ${{ github.event.issue.number }}
 
       - name: Define instance name
