fix: Fix extraction of issue fields adding "token" input
It fixes the following error:

> To use GitHub CLI in a GitHub Actions workflow, set the GH_TOKEN environment variable

--- a/.github/workflows/send-email.yml
+++ b/.github/workflows/send-email.yml
@@ -27,6 +27,7 @@ jobs:
         id: extract
         uses: ./.github/actions/extract-issue-fields
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           repository: ${{ github.repository }}
           issue_number: ${{ github.event.issue.number }}
 
