--- a/.github/actions/extract-issue-fields/action.yml
+++ b/.github/actions/extract-issue-fields/action.yml
@@ -1,6 +1,9 @@
 name: "Extract issue fields"
 description: "Extract issue fields"
 inputs:
+  token:
+    description: "GITHUB_TOKEN or repo scoped PAT"
+    required: true
   repository:
     description: "The full name of the repository in which the issue exists"
     required: true
@@ -25,6 +28,8 @@ runs:
           --repo ${{ inputs.repository }} \
           --json body --jq '.body')
         echo "body=$body" >> $GITHUB_OUTPUT
+      env:
+        GITHUB_TOKEN: ${{ inputs.token }}
 
     - name: Issue Forms Body Parser
       id: parse
