fix: Attempt to fix extraction of issue body
```
body=$(gh issue view 30 \
    --repo jcfr/MorphoCloudPortal \
    --json body --jq '.body')
  echo "body=$body" >> $GITHUB_OUTPUT
  shell: /usr/bin/bash --noprofile --norc -e -o pipefail {0}
  env:
    GITHUB_TOKEN: ***
Error: Unable to process file command 'output' successfully.
```

--- a/.github/actions/extract-issue-fields/action.yml
+++ b/.github/actions/extract-issue-fields/action.yml
@@ -26,7 +26,8 @@ runs:
       run: |
         body=$(gh issue view ${{ inputs.issue_number }} \
           --repo ${{ inputs.repository }} \
-          --json body --jq '.body')
+          --json body | \
+          jq '.body')
         echo "body=$body" >> $GITHUB_OUTPUT
       env:
         GITHUB_TOKEN: ${{ inputs.token }}
