fix: Ensure instance_name input is passed in retrieve-metadata composite action

--- a/.github/actions/retrieve-metadata/action.yml
+++ b/.github/actions/retrieve-metadata/action.yml
@@ -58,4 +58,4 @@ runs:
         echo "::add-mask::$instance_pwd"
         echo "instance_pwd=$instance_pwd" >> $GITHUB_OUTPUT
       env:
-        INSTANCE_NAME: ${{ steps.define.outputs.instance_name }}
+        INSTANCE_NAME: ${{ inputs.instance_name }}
