feat: Update "control-instance" to wait for command to complete
Introduce "instance_poll" job running for all commands expect "delete"

--- a/.github/workflows/control-instance.yml
+++ b/.github/workflows/control-instance.yml
@@ -83,30 +83,37 @@ jobs:
             continue="$UNSHELVE_COMMAND_CONTINUE"
             command_name="unshelve"
             comment_id="${{ steps.unshelve_command.outputs.comment_id }}"
+            expected_status="ACTIVE"
           elif [[ "$SHELVE_COMMAND_CONTINUE" == "true" ]]; then
             continue="$SHELVE_COMMAND_CONTINUE"
             command_name="shelve"
             comment_id="${{ steps.shelve_command.outputs.comment_id }}"
+            expected_status="SHELVED_OFFLOADED"
           elif [[ "$START_COMMAND_CONTINUE" == "true" ]]; then
             continue="$START_COMMAND_CONTINUE"
             command_name="start"
             comment_id="${{ steps.start_command.outputs.comment_id }}"
+            expected_status="ACTIVE"
           elif [[ "$STOP_COMMAND_CONTINUE" == "true" ]]; then
             continue="$STOP_COMMAND_CONTINUE"
             command_name="stop"
             comment_id="${{ steps.stop_command.outputs.comment_id }}"
+            expected_status="SHUTOFF"
           elif [[ "$DELETE_COMMAND_CONTINUE" == "true" ]]; then
             continue="$DELETE_COMMAND_CONTINUE"
             command_name="delete"
             comment_id="${{ steps.delete_command.outputs.comment_id }}"
+            expected_status=""
           else
             continue="false"
             command_name=""
             comment_id=""
+            expected_status=""
           fi
           echo "continue=$continue" >> $GITHUB_OUTPUT
           echo "command_name=$command_name" >> $GITHUB_OUTPUT
           echo "comment_id=$comment_id" >> $GITHUB_OUTPUT
+          echo "expected_status=$expected_status" >> $GITHUB_OUTPUT
         env:
           UNSHELVE_COMMAND_CONTINUE:
             ${{ steps.unshelve_command.outputs.continue }}
@@ -155,6 +162,58 @@ jobs:
         env:
           INSTANCE_NAME: ${{ steps.define.outputs.instance_name }}
           COMMAND_NAME: ${{ steps.command.outputs.command_name }}
+
+      - name: Poll instance status
+        id: instance_poll
+        if: ${{ steps.command.outputs.expected_status != '' }}
+        run: |
+          export OS_CLOUD=BIO180006_IU # Select openstack auth settings defined in ".config/openstack/clouds.yaml"
+
+          source ~/venv/bin/activate
+
+          echo Polling "$INSTANCE_NAME" status
+
+          max_wait_time=300  # Maximum wait time in seconds (300s -> 5mins)
+          wait_interval=5    # Interval between status checks in seconds
+          total_wait_time=0
+
+          while [ $total_wait_time -lt $max_wait_time ]; do
+
+              status=$(openstack server show $INSTANCE_NAME -f json -c status | \
+                jq -r '.status // "PENDING"')
+
+              echo -n "status [$status]. "
+
+              if [[ "$status" = "$EXPECTED_STATUS" ]]; then
+                  echo "Exiting loop."
+                  break
+              else
+                  echo "Waiting for completion..."
+                  sleep $wait_interval
+                  total_wait_time=$((total_wait_time + wait_interval))
+              fi
+          done
+
+          if [ $total_wait_time -ge $max_wait_time ]; then
+              echo "::error ::Maximum wait time ($max_wait_time seconds) exceeded."
+              exit 1
+          fi
+
+          echo "status=$status" >> $GITHUB_OUTPUT
+        env:
+          INSTANCE_NAME: ${{ steps.define.outputs.instance_name }}
+          EXPECTED_STATUS: ${{ steps.command.outputs.expected_status }}
+
+      - name: comment (maximum wait time exceeded)
+        if: ${{ steps.instance_poll.outcome == 'failure' && failure() }}
+        uses: peter-evans/create-or-update-comment@v4.0.0
+        with:
+          issue-number: ${{ github.event.issue.number }}
+          body: |
+            ### Command Results ❌
+
+            Maximum wait time for command `${{ steps.command.outputs.command_name }}` command to complete exceeded.
+            See details at https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
 
       - name: command results comment (success)
         if:
