feat(validate): Update "/validate" command to check "ORCID iD"

--- a/.github/workflows/validate-request.yml
+++ b/.github/workflows/validate-request.yml
@@ -36,6 +36,21 @@ jobs:
           repository: ${{ github.repository }}
           issue_number: ${{ github.event.issue.number }}
 
+      - name: Check ORCID iD format
+        id: check_orcid_format
+        run: |
+          if [[ "$ORCID" =~ ^([0-9]{4}-){3}[0-9]{3}([0-9]|X)$ ]]; then
+            valid="true"
+            emojii="✅"
+          else
+            valid="false"
+            emojii="❌"
+          fi
+          echo "valid=$valid" >> $GITHUB_OUTPUT
+          echo "emojii=$emojii" >> $GITHUB_OUTPUT
+        env:
+          ORCID: ${{ steps.extract.outputs.orcid }}
+
       - name: Check email format
         id: check_email_format
         run: |
@@ -74,6 +89,7 @@ jobs:
 
             | Check           | Status  |
             | --------------- |:-------:|
+            | ORCID iD format | ${{ steps.check_orcid_format.outputs.emojii }} |
             | Email format    | ${{ steps.check_email_format.outputs.emojii }} |
 
             See details at https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
