--- a/.github/workflows/create-instance.yml
+++ b/.github/workflows/create-instance.yml
@@ -161,7 +161,7 @@ jobs:
             --security-group "default" \
             --security-group "exosphere" \
             --flavor $INSTANCE_FLAVOR \
-            --image "GPU-rebuild-image-slicer562" \
+            --image "Featured-Ubuntu22" \
             --key-name "jcfr" \
             --property "exoGuac={\"v\":1,\"ssh\":true,\"vnc\":true}" \
             --property "exoClientUuid=$exoClientUuid" \
